# lab14

./: .gitignore  PROMPT_LOG.md  README.md  docker-compose.yml
analyzer/: flight_client.py  nats_consumer.py  requirements.txt  validate_example.py
arrow_server/: go.mod  go.sum  main.go  main_test.go
collector/: Dockerfile  accident.go  collector.go  collector_test.go  go.mod  go.sum  main.go  nats_producer.go  shard.go  window.go  window_writer.go  writer.go
collector_py/: benchmark.py  main.py  requirements.txt
dashboard/: app.py  requirements.txt
data/: mock_generator.py
k8s/: deployment.yaml  hpa.yaml  service.yaml
rust_validator/: Cargo.toml  pyproject.toml
rust_validator/src/: lib.rs
tests/: conftest.py  test_collector_py.py  test_mock_generator.py  test_nats_consumer.py
